--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Eamonn O'Brien-Strain",
   "license": "ISC",
   "dependencies": {
-    "node-html-parser": "^6.1.5"
+    "node-html-parser": "^6.1.5",
+    "openai": "^3.2.1",
+    "passprint": "^0.0.1"
   }
 }
